Resolved overlapping of Space name and Appearance tab in Preferences.

--- a/res/css/views/dialogs/_SettingsDialog.scss
+++ b/res/css/views/dialogs/_SettingsDialog.scss
@@ -26,6 +26,7 @@ limitations under the License.
 
     .mx_TabbedView {
         top: 65px;
+        background-color: $background;
     }
 
     .mx_TabbedView .mx_SettingsTab {
